2013-05-02 Jérôme Pasquier  <rainbru@free.fr>

	* src/genapi.pl : sources moved in src/ subdirectory.
